--- a/exeapp/static/css/styles/common.scss
+++ b/exeapp/static/css/styles/common.scss
@@ -22,7 +22,6 @@ body {
 }
 
 .container {
-  width: 1170px;
   margin: 0 auto;
 }
 
